# mz-escaper

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml  rust-toolchain.toml
.claude/: CLAUDE.md  settings.json
.github/workflows/: deploy.yml  release.yml
deploy/: nginx.conf.example
src/: autostart.rs  chat.rs  config.rs  desktop.rs  main.rs  ratelimit.rs  tone.rs  update.rs
static/: index.html
