[package]
name = "mz-escaper"
version = "0.1.0"
edition = "2021"

[dependencies]
# 웹 서버. tokio 위에서 도는 비동기 라우터.
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }

# 업스트림(LLM 게이트웨이) 호출용 HTTP 클라이언트.
# default-features = false 로 무거운 native-tls를 빼고 rustls만 쓴다.
# stream 피처가 있어야 응답을 통째로 버퍼링하지 않고 청크 단위로 흘려보낼 수 있다.
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "http2"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

# .env 파일 로딩. 운영에서는 실제 환경변수를 쓰면 되고, 없으면 조용히 넘어간다.
dotenvy = "0.15"

[profile.release]
opt-level = 3
lto = true          # 링크 타임 최적화. 바이너리 크기와 속도 모두 개선.
codegen-units = 1   # 병렬 코드젠을 포기하는 대신 최적화 품질을 높인다.
strip = true        # 디버그 심볼 제거. 배포 바이너리 크기가 크게 줄어든다.
panic = "abort"     # 언와인딩 코드를 제거해 바이너리를 더 줄인다.
