[package]
name = "mz-escaper"
version = "0.2.0"
edition = "2021"

[dependencies]
# 웹 서버. tokio 위에서 도는 비동기 라우터.
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }

# 업스트림(LLM 게이트웨이) 호출용 HTTP 클라이언트.
# default-features = false 로 무거운 native-tls를 빼고 rustls만 쓴다.
# stream 피처가 있어야 응답을 통째로 버퍼링하지 않고 청크 단위로 흘려보낼 수 있다.
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "http2"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 자체 업데이트용.
# semver: "0.2.0" 같은 버전 문자열을 숫자로 비교한다. 문자열 비교로는 0.10 < 0.9 가 되어버린다.
semver = "1"
# sha2: 내려받은 바이너리가 매니페스트에 적힌 해시와 같은지 확인한다. HTTPS만으로는
# 릴리스 저장소가 오염된 경우를 못 잡는다.
sha2 = "0.10"
# self-replace: 실행 중인 exe는 덮어쓸 수 없다(Windows는 파일 잠금). 이 크레이트가
# 현재 exe를 임시 이름으로 밀어내고 새 파일을 제자리에 놓는 OS별 절차를 처리한다.
self-replace = "1"

# .env 파일 로딩. 운영에서는 실제 환경변수를 쓰면 되고, 없으면 조용히 넘어간다.
dotenvy = "0.15"

# 유저에게 배포되는 Windows exe 를 네이티브 창으로 띄운다. 콘솔창 대신 진짜 데스크톱
# 창 안에 WebView2(엣지 엔진)로 기존 UI 를 그린다.
#   - tao: 창과 이벤트 루프 (winit 계열)
#   - wry: 그 창 안에 WebView 를 올린다
# cfg(windows) 로 묶는 이유: Docker 백엔드(Linux)는 이 크레이트들을 컴파일조차 하지
# 않는다. 백엔드는 창을 열지 않으므로 필요도 없고, Linux 에서 WebKitGTK 의존을 끌어오는
# 것도 피한다. rfd 는 WebView2 런타임이 없을 때 안내 대화상자를 띄우는 용도다.
[target.'cfg(windows)'.dependencies]
tao = "0.30"
wry = "0.45"
rfd = "0.15"
# 시작 시 자동 실행 토글용. HKCU\...\Run 레지스트리 값을 읽고 쓴다.
winreg = "0.52"

[profile.release]
opt-level = 3
lto = true          # 링크 타임 최적화. 바이너리 크기와 속도 모두 개선.
codegen-units = 1   # 병렬 코드젠을 포기하는 대신 최적화 품질을 높인다.
strip = true        # 디버그 심볼 제거. 배포 바이너리 크기가 크게 줄어든다.
panic = "abort"     # 언와인딩 코드를 제거해 바이너리를 더 줄인다.
